Fix selectize styling
  Replace selectize.min.js with selectize.js
  https://github.com/brianreavis/selectize.js/commit/dfcdf60b7ac5ac5bf25e01053249bf214fcpublic/js/selectize.min.jsa6ed5

  Seems like the new version does not use "display: inline-block"
  which then does not add extra spacing under the selectize div.

  Instead it has the default styling for a div which is block.
  This does not go well with the current help text, but I don't care
  now, since it will not matter with the new settings page (which is not
  yet created) which use the same form styling as the register/wizard
  forms.

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -179,20 +179,18 @@ form {
 
   select[multi] { height: 30px; }
   input[readonly] { background: #f6f6f6; color: #666; }
-  .selectize-input, .selectize-control.single .selectize-input.focus, input, select {
+  .selectize-input, input, select {
     background: #fff;
-    padding: 4px;
-    font-size: 1.1em;
+    font-size: $fontSize - 1;
     outline: none;
     border: 2px solid #ccc;
+    padding: 4px;
     width: 290px;
     @include border-radius(3px);
   }
-  input[type="checkbox"] { width: auto; }
-  .selectize-input {
-    padding: 2px; // no idea why 2px is right instead of 4px
-  }
+  .selectize-input { padding: 2px; }
   .selectize-input.focus, input:focus { border: 2px solid darken(#ccc, 15%); }
+  input[type="checkbox"] { width: auto; }
   input.field-with-error, select.field-with-error {
     border-color: $errorColor;
   }
@@ -507,9 +505,6 @@ div.messages {
     overflow: visible;
     form > div, div.content, h3 { clear: left; margin: 2px 0 2px $marginLeft; }
     label { float: left; margin-left: -$marginLeft; margin-top: 4px; }
-    input, button, .button, .selectize-input, .selectize-control.single .selectize-input.focus {
-      font-size: 1em;
-    }
     p.help { display: inline; }
   }
 }
