--- a/public/sass/selectize.scss
+++ b/public/sass/selectize.scss
@@ -1,5 +1,4 @@
 .selectize-input.dropdown-active { @include border-radius(3px); }
-.selectize-input.full { background-color: #f2f2f2; }
 .selectize-input.dropdown-active::before {
   content: ' ';
   display: block;
